fix: new logo (png)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
       rel="stylesheet"
     />
-    />
     <!-- Feather Icons-->
     <script src="https://unpkg.com/feather-icons"></script>
 
@@ -22,9 +21,9 @@
     <!-- NavBar start -->
     <nav class="navbar">
       <a href="#" class="logo">
-        <img src="./../img/navbar-logo.jpg" alt="logo" class="logo" />
+        <img src="/img/navbar-logo.png" alt="logo" class="logo"/>
       </a>
-      <a href="#" class="navbar-logo">oita<span>presso</span>.</a>
+      <a href="#" class="navbar-logo">O<span>presso</span>.</a>
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
@@ -52,11 +51,12 @@
 
     <!-- About Section start -->
     <section id="about" class="about">
-      <h2>About<span> Us</span></h2><hr class="menu1">
+      <h2>About<span> Us</span></h2>
+      <hr class="menu1" />
 
       <div class="row">
         <div class="about-img">
-          <img src="./../img/about-us.jpg" alt="About Us" />
+          <img src="/img/about-us.jpg" alt="About Us" />
         </div>
         <div class="content">
           <h3>Why Us?</h3>
