--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- NavBar start -->
     <nav class="navbar">
       <a href="#" class="logo">
-        <img src="/img/navbar-logo.png" alt="logo" class="logo"/>
+        <img src="img/navbar-logo.png" alt="logo" class="logo" />
       </a>
       <a href="#" class="navbar-logo">O<span>presso</span>.</a>
       <div class="navbar-nav">
@@ -56,7 +56,7 @@
 
       <div class="row">
         <div class="about-img">
-          <img src="/img/about-us.jpg" alt="About Us" />
+          <img src="img/about-us.jpg" alt="About Us" />
         </div>
         <div class="content">
           <h3>Why Us?</h3>
@@ -109,7 +109,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="../img/menu/cold brew.jpg"
+            src="img/menu/cold brew.jpg"
             alt="Clod Brew"
             class="menu-card-title"
           />
